--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 <ul class="links-list">
                     <li>
                         <a href="https://t.me/uerton" target="_blank">
-                            📱 Telegram: @uerton.t.me
+                            📱 Telegram: @userton.t.me
                         </a>
                     </li>
                     <li>
