--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                         FRONTEND DEVELOPER
                     </div>
                     <div class="diploma-progress">
-                        <div class="diploma-text">Computer Programming & Analysis diploma: <span class="percentage">52%</span> complete<span class="loading-dots"><span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span></span></div>
+                        <div class="diploma-text">Computer Programming & Analysis Diploma: <span class="percentage">52%</span> complete<span class="loading-dots"><span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span></span></div>
                         <div class="mini-battery-container">
                             <div class="mini-battery-body">
                                 <div class="mini-battery-fill" style="width: 52%;">
